--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="mailto:junayedrahaman500@gmail.com" data-toggle="tooltip"  data-placement="bottom" title="Email Me">
+              <a href="https://mail.google.com/mail/?view=cm&to={junayedrahaman500@gmail.com}" data-toggle="tooltip"  data-placement="bottom" title="Email Me">
                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
