--- a/QuickBooks/index.html
+++ b/QuickBooks/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
-    <link rel="stylesheet" media="screen ans (min-width:1100px)" href="css/widescreen.css">
+    <link rel="stylesheet" media="screen and (min-width:1100px)" href="css/widescreen.css">
   <title>QuickBooks Website Flexbox</title>
 </head>
 <body id="home">
@@ -29,7 +29,7 @@
 
   <!-- Navbar -->
 <nav id="navbar">
-  <h1>
+  <h1 class="logo">
     <span class="text-primary"><i class="fas fa-book"></i> Quick</span> Books
   </h1>
   <ul>
@@ -164,11 +164,18 @@
   </div>
 </footer>
 
+<!-- JQuery CDN -->
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+
+<!-- Local Js -->
 <script src="js/main.js"></script>
 
+<!-- Google Maps -->
 <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDa0t1WgubkF-JHmPh6wOvF6DRjctffvHI&callback=initMap">
 </script>
+
+
 
 </body>
 </html>
