--- a/QuickBooks/index.html
+++ b/QuickBooks/index.html
@@ -83,7 +83,7 @@
               <i class="fas fa-pencil-alt fa-2x"></i>
               <div>
                 <h3>Tax & Custodial</h3>
-                <p>We have plenty of tax proffesionals to do yor taxes.</p>
+                <p>We have plenty of tax proffesionals to do your taxes.</p>
               </div>
           </div>
   </div>
