Contact form h2 added text-primary class

--- a/QuickBooks/index.html
+++ b/QuickBooks/index.html
@@ -126,7 +126,7 @@
 <!-- section contact -->
 <section id="contact">
   <div class="contact-form bg-normal p-2">
-  <h2 class="m-heading font-primary">Contact Us</h2>
+  <h2 class="m-heading font-primary"><span class="text-primary">Contact</span> Us</h2>
   <p class="lead2">Please use the form below to contact us</p>
 
 <form>
