Contact form fixes

--- a/QuickBooks/index.html
+++ b/QuickBooks/index.html
@@ -125,9 +125,9 @@
 
 <!-- section contact -->
 <section id="contact">
-  <div class="contact-form bg-normal p-2">
-  <h2 class="m-heading font-primary"><span class="text-primary">Contact</span> Us</h2>
-  <p class="lead2">Please use the form below to contact us</p>
+  <div class="contact-form bg-normal p-1">
+  <h2 class="m-heading font-primary text-center"><span class="text-primary">Contact</span> Us</h2>
+  <p class="lead2 text-center">Please use the form below to contact us</p>
 
 <form>
   <div class="form-group">
