--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading text-center">
             <h1 class="animate__animated animate__fadeInDown">Hi, I'm Junayed. I design & build websites.</h1>
-            <a href="#about-me" class="btn btn-outline-secondary btn-lg">
+            <a href="#about-me" class="myButton">
           <i class="fa fa-arrow-right" aria-hidden="true"></i> Read More</a>
           </div>
         </div>
