--- a/portfolio-website-V1/index.html
+++ b/portfolio-website-V1/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Postnation - Read Something New</title>
+	<title>Junayed Rahaman - Web Developer and Designer</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
 <script src="js/jquery.min.js"></script>
 </head>
 <body>
@@ -20,12 +23,6 @@
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <!-- <li class="nav-item">
-            <a id="nav-link" href="index.html" class="nav-link"> Home</a>
-          </li> -->
-          <!-- <li class="nav-item">
-            <a id="nav-link" href="index.html" class="nav-link"><i class="fa fa-home"></i> Home</a>
-          </li> -->
           <li class="nav-item">
             <a id="nav-link" href="#" class="nav-link"><i class="fa fa-user"></i> About Me</a>
           </li>
@@ -43,6 +40,20 @@
       </div>
     </div>
   </nav>
+
+  <div class="container mt-3">
+    <div class="row">
+      <div class="col-md-8 col-centered">
+        <div class="jumbotron" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;"> 
+        <h4 class="text-center">Hi friends 👋 —
+          I'm Junayed Rahaman. I'm a Web Developer and Designer.</h4>
+          <p class="text-center pt-3">On this site I will be posting web development and computer science stuff as well as books 📚 and sports ⚽ reviews.</p>
+          <p class="text-center pt-2">And over at Sunday Snippets - my weekly newsletter - I share actionable productivity tips and practical life advice. Sign up get updated with amazing contents 😄.</p>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
 
 <script src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
