--- a/portfolio-website-V1/index.html
+++ b/portfolio-website-V1/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/ripple.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
@@ -88,7 +89,28 @@
       </div>
       </div>
     </div>
-  </div>
+
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-md-8 col-centered">
+        <div class="box" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;padding: 20px;">
+          <h4 class="text-center">Check out my projects <i class="fa fa-laptop" aria-hidden="true"></i></h4>
+          <div class="card my-3">
+            <h5 class="card-header text-center">DailyPay</h5>
+            <div class="card-body">
+              <h5 class="card-title">Budgeting App</h5>
+              <p style="color: dimgray;" class="card-text">A Web App to keep track of budget and create transaction records.</p>
+              <button class="myBtnBlue ripple">Repository <i class="fa fa-code"></i> </button>
+                      <button id="delete" class="myBtnRed ripple ml-2">Website <i class="fa fa-globe"></i> </button>
+            </div>
+          </div> 
+        </div>
+
+        
+      </div>
+      </div>
+    </div>
+
 
 <script src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
