--- a/portfolio-website-V1/index.html
+++ b/portfolio-website-V1/index.html
@@ -100,8 +100,8 @@
             <div class="card-body">
               <h5 class="card-title">Budgeting App</h5>
               <p style="color: dimgray;" class="card-text">A Web App to keep track of budget and create transaction records.</p>
-              <button class="myBtnBlue ripple">Repository <i class="fa fa-code"></i> </button>
-                      <button id="delete" class="myBtnRed ripple ml-2">Website <i class="fa fa-globe"></i> </button>
+              <a target="_blank" href="https://github.com/junayedrahaman50/DailyPay" class="myBtnBlue ripple">Repository <i class="fa fa-code"></i> </a>
+                      <a target="_blank" href="https://sleepy-atoll-78261.herokuapp.com/" id="delete" class="myBtnRed ripple ml-2">Website <i class="fa fa-globe"></i> </a>
             </div>
           </div> 
         </div>
