--- a/portfolio-website-V1/index.html
+++ b/portfolio-website-V1/index.html
@@ -57,20 +57,20 @@
         Junayed Rahaman
       </a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div id="navbar" class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a id="nav-link" href="#" class="nav-link"><i class="fa fa-user"></i> About Me</a>
+            <a id="nav-link" href="#about" class="nav-link"><i class="fa fa-user"></i> About Me</a>
           </li>
           <li class="nav-item">
-            <a id="nav-link" href="#" class="nav-link"><i class="fa fa-code"></i> Projects</a>
+            <a id="nav-link" href="#projects" class="nav-link"><i class="fa fa-code"></i> Projects</a>
           </li>          
 
           <li class="nav-item">
-            <a id="nav-link" href="#" class="nav-link"><i class="fa fa-book"></i> Book Notes</a>
+            <a id="nav-link" href="#book" class="nav-link"><i class="fa fa-book"></i> Book Notes</a>
           </li>
           <li class="nav-item">
-            <a id="nav-link" href="#" class="nav-link"><i class="fa fa-commenting"></i> Contact</a>
+            <a id="nav-link" href="#contact" class="nav-link"><i class="fa fa-commenting"></i> Contact</a>
           </li>
         </ul>
       </div>
@@ -80,7 +80,7 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-8 col-centered">
-        <div class="jumbotron" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;"> 
+        <div id="about" class="jumbotron" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;"> 
         <h4 class="text-center">Hi friends 👋 —
           I'm Junayed Rahaman. I'm a Web Developer and Designer.</h4>
           <p class="text-center pt-3">On this site I will be posting web development and computer science stuff as well as books 📚 and sports ⚽ reviews.</p>
@@ -90,20 +90,30 @@
       </div>
     </div>
 
-    <div class="container mt-3">
+    <div id="projects" class="container my-3">
       <div class="row">
         <div class="col-md-8 col-centered">
         <div class="box" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;padding: 20px;">
-          <h4 class="text-center">Check out my projects <i class="fa fa-laptop" aria-hidden="true"></i></h4>
+          <h4 class="text-center gloria pb-4">{ Check out my projects <i class="fa fa-laptop" aria-hidden="true"></i> }</h4>
           <div class="card my-3">
             <h5 class="card-header text-center">DailyPay</h5>
             <div class="card-body">
               <h5 class="card-title">Budgeting App</h5>
               <p style="color: dimgray;" class="card-text">A Web App to keep track of budget and create transaction records.</p>
-              <a target="_blank" href="https://github.com/junayedrahaman50/DailyPay" class="myBtnBlue ripple">Repository <i class="fa fa-code"></i> </a>
-                      <a target="_blank" href="https://sleepy-atoll-78261.herokuapp.com/" id="delete" class="myBtnRed ripple ml-2">Website <i class="fa fa-globe"></i> </a>
+              <a href="https://github.com/junayedrahaman50/DailyPay" class="myBtnBlue ripple">Repository <i class="fa fa-code"></i> </a>
+                      <a href="https://sleepy-atoll-78261.herokuapp.com/" id="delete" class="myBtnRed ripple ml-2">Website <i class="fa fa-globe"></i> </a>
             </div>
           </div> 
+          <div class="card my-3">
+            <h5 class="card-header text-center">QuickBooks</h5>
+            <div class="card-body">
+              <h5 class="card-title">Accounting Firm Website</h5>
+              <p style="color: dimgray;" class="card-text">Accounting firm concept website buil using flexbox</p>
+              <a href="https://github.com/junayedrahaman50/junayedrahaman50.github.io/tree/master/QuickBooks" class="myBtnBlue ripple">Repository <i class="fa fa-code"></i> </a>
+                      <a href="https://junayedrahaman50.github.io/QuickBooks/" id="delete" class="myBtnRed ripple ml-2">Website <i class="fa fa-globe"></i> </a>
+            </div>
+          </div> 
+
         </div>
 
         
@@ -132,6 +142,22 @@
             "body").style.visibility = "visible";
       }
   };
+
+  // Smooth Scrolling
+$('#navbar a').on('click', function(event) {
+  if (this.hash !== '') {
+    event.preventDefault();
+
+    const hash = this.hash;
+
+    $('html, body').animate(
+      {
+        scrollTop: $(hash).offset().top
+      },
+      800
+    );
+  }
+});
 </script>
 </body>
 </html>
