--- a/portfolio-website-V1/index.html
+++ b/portfolio-website-V1/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/ripple.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
 <script src="js/jquery.min.js"></script>
 
 <style>
@@ -79,12 +79,12 @@
 
   <div class="container mt-3">
     <div class="row">
-      <div class="col-md-8 col-centered">
+      <div class="col-lg-10 col-md-10 col-sm-12 col-centered">
         <div id="about" class="jumbotron" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;"> 
-        <h4 class="text-center">Hi friends 👋 —
+        <h4 class="text-center ubuntu">Hi friends 👋 —
           I'm Junayed Rahaman. I'm a Web Developer and Designer.</h4>
-          <p class="text-center pt-3">On this site I will be posting web development and computer science stuff as well as books 📚 and sports ⚽ reviews.</p>
-          <p class="text-center pt-2">And over at Sunday Snippets - my weekly newsletter - I share web development and productivity tips for developers. Sign up and get updated with amazing contents 😄.</p>
+          <p class="text-center pt-3 ubuntu">On this site I will be posting web development and computer science stuff as well as books 📚 and sports ⚽ reviews.</p>
+          <p class="text-center pt-2 ubuntu">And over at Sunday Snippets - my weekly newsletter - I share web development and productivity tips for developers. Sign up and get updated with amazing contents 😄.</p>
         </div>
       </div>
       </div>
@@ -92,25 +92,25 @@
 
     <div id="projects" class="container my-3">
       <div class="row">
-        <div class="col-md-8 col-centered">
+        <div class="col-lg-10 col-md-10 col-sm-12 col-centered">
         <div class="box" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;padding: 20px;">
           <h4 class="text-center gloria pb-4">{ Check out my projects }</h4>
           <div class="card my-3">
             <h5 class="card-header text-center">DailyPay</h5>
             <div class="card-body">
               <h5 class="card-title">Budgeting App</h5>
-              <p style="color: dimgray;" class="card-text">A Web App to keep track of budget and create transaction records.</p>
-              <a href="https://github.com/junayedrahaman50/DailyPay" class="myBtnBlue ripple">Repository <i class="fa fa-code"></i> </a>
-                      <a href="https://sleepy-atoll-78261.herokuapp.com/" id="delete" class="myBtnRed ripple ml-2">Website <i class="fa fa-globe"></i> </a>
+              <p style="color: dimgray;" class="card-text ubuntu">A Web App to keep track of budget and create transaction records.</p>
+              <a href="https://github.com/junayedrahaman50/DailyPay" class="myBtnBlue ripple ubuntu">Repository <i class="fa fa-code"></i> </a>
+                      <a href="https://sleepy-atoll-78261.herokuapp.com/" id="delete" class="myBtnRed ripple ml-2 ubuntu">Website <i class="fa fa-globe"></i> </a>
             </div>
           </div> 
           <div class="card my-3">
             <h5 class="card-header text-center">QuickBooks</h5>
             <div class="card-body">
               <h5 class="card-title">Accounting Firm Website</h5>
-              <p style="color: dimgray;" class="card-text">Accounting firm concept website buil using flexbox</p>
-              <a href="https://github.com/junayedrahaman50/junayedrahaman50.github.io/tree/master/QuickBooks" class="myBtnBlue ripple">Repository <i class="fa fa-code"></i> </a>
-                      <a href="https://junayedrahaman50.github.io/QuickBooks/" id="delete" class="myBtnRed ripple ml-2">Website <i class="fa fa-globe"></i> </a>
+              <p style="color: dimgray;" class="card-text ubuntu">Accounting firm concept website buil using flexbox</p>
+              <a href="https://github.com/junayedrahaman50/junayedrahaman50.github.io/tree/master/QuickBooks" class="myBtnBlue ripple ubuntu">Repository <i class="fa fa-code"></i> </a>
+                      <a href="https://junayedrahaman50.github.io/QuickBooks/" id="delete" class="myBtnRed ripple ml-2 ubuntu">Website <i class="fa fa-globe"></i> </a>
             </div>
           </div> 
 
@@ -118,6 +118,24 @@
 
         
       </div>
+      </div>
+    </div>
+
+    <div id="contact" class="container">
+      <div class="row">
+        <div class="col-lg-10 col-md-10 col-sm-12 col-centered">
+          <div class="box my-3" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;padding: 20px;">
+            <h4 class="text-center gloria pb-4">{ Contact Me }</h4>
+            <div class="icons">
+              <a href="https://wa.me/918145486622" data-toggle="tooltip"  data-placement="bottom" title="Connect On Whatsapp"><i class="fa fa-whatsapp fa-3x"></i></a>
+              <a href="https://mail.google.com/mail/?view=cm&to=junayedrahaman500@gmail.com" data-toggle="tooltip"  data-placement="bottom" title="Email Me"><i class="fa fa-envelope fa-3x"></i></a>
+              <a  href="https://github.com/junayedrahaman50" data-toggle="tooltip"  data-placement="bottom" title="Github"><i class="fa fa-github fa-3x"></i></a>
+            </div>
+
+            <p class="text-center gloria pt-4"> Copyright &copy; junayedrahaman.github.io 2022 </p>
+          
+          </div>
+        </div>
       </div>
     </div>
 
