--- a/portfolio-website-V1/index.html
+++ b/portfolio-website-V1/index.html
@@ -24,7 +24,7 @@
       z-index: 5;
       border: 12px solid #f3f3f3;
       border-radius: 50%;
-      border-top: 12px solid #502ca7;
+      border-top: 12px solid dodgerblue;
       width: 70px;
       height: 70px;
       animation: spin 1s linear infinite;
