--- a/portfolio-website-V1/index.html
+++ b/portfolio-website-V1/index.html
@@ -80,7 +80,9 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-lg-10 col-md-10 col-sm-12 col-centered">
+        
         <div id="about" class="jumbotron" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;"> 
+          <h4 class="text-center gloria py-2">{ About Me }</h4>
         <h4 class="text-center ubuntu">Hi friends 👋 —
           I'm Junayed Rahaman. I'm a Web Developer and Designer.</h4>
           <p class="text-center pt-3 ubuntu">On this site I will be posting web development and computer science stuff as well as books 📚 and sports ⚽ reviews.</p>
