--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="col-lg-10 col-md-10 col-sm-12 col-centered">
         
         <div id="about" class="jumbotron" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;"> 
-          <h4 class="text-center gloria pt-2 pb-4">{ About Me }</h4>
+          <h4 class="text-center gloria pt-2 pb-4">< About Me ></h4>
         <h4 class="text-center ubuntu">Hi friends 👋 —
           I'm Junayed Rahaman. I'm a Web Developer and Designer.</h4>
           <p class="text-center pt-3 ubuntu">On this site I will be posting web development and computer science stuff as well as books 📚 and sports ⚽ reviews.</p>
@@ -104,7 +104,7 @@
       <div class="row">
         <div class="col-lg-10 col-md-10 col-sm-12 col-centered">
         <div class="box" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;padding: 20px;">
-          <h4 class="text-center gloria pb-4">{ Check out my projects }</h4>
+          <h4 class="text-center gloria pb-4">< Check out my projects ></h4>
           <div class="card my-3">
             <h5 class="card-header text-center">DailyPay</h5>
             <div class="card-body">
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-lg-10 col-md-10 col-sm-12 col-centered">
           <div class="box my-3" style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;padding: 20px;">
-            <h4 class="text-center gloria pb-4">{ Contact Me }</h4>
+            <h4 class="text-center gloria pb-4">< Contact Me ></h4>
             <div class="icons">
               <a href="https://wa.me/918145486622" data-toggle="tooltip"  data-placement="bottom" title="Connect On Whatsapp"><i class="fa fa-whatsapp fa-3x"></i></a>
               <a href="https://mail.google.com/mail/?view=cm&to=junayedrahaman500@gmail.com" data-toggle="tooltip"  data-placement="bottom" title="Email Me"><i class="fa fa-envelope fa-3x"></i></a>
