added new files

--- a/habitapp/index.html
+++ b/habitapp/index.html
@@ -10,12 +10,15 @@
 
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;700&display=swap">
+
 
     <style type="text/css">
-      *{
-        font-family: 'ubuntu', sans-serif !important;
-      }
+
+a, button, html, input, li, option, p, select, table, tbody, td, textarea, th, thead, tr {
+  font-family: 'Open Sans', sans-serif !important;
+        font-weight: 400;
+}
       @font-face {
   font-family: 'Pacifico';
   font-style: normal;
@@ -41,6 +44,10 @@
             display: none;
             }
         }
+        h1,h2,h3,h4,h5{
+          font-family: 'Poppins' !important;
+          font-weight: 700;
+        }
 
         .creditBox{
          display: flex;
@@ -61,6 +68,7 @@
             align-items: center;
             justify-content: space-evenly;
         }
+
         li{
             font-size: 0.4rem;
         }
