--- a/habitapp/index.html
+++ b/habitapp/index.html
@@ -137,10 +137,16 @@
       }
 
       @media only screen and (max-width: 480px) {
+        body,
+        .paper {
+          background-color: #fff;
+        }
         .container {
           width: 100%;
           margin-top: 0;
           margin-bottom: 0;
+          box-shadow: none;
+          border: none;
         }
 
         .border {
@@ -152,15 +158,30 @@
         }
         th,
         td,
+        #iBtn,
         .creditBox p {
-          font-size: 0.85rem;
+          font-size: 0.75rem;
         }
         .text-secondary {
-          margin-bottom: 4.8rem;
+          margin-top: 0;
+          margin-block-end: 0;
           font-size: 1.2rem;
         }
+        .box {
+          margin-top: 1rem;
+          border-top: 1px solid #e6e7e9;
+          border-bottom: 1px solid #e6e7e9;
+          margin-bottom: 4.8rem;
+          padding: 1rem;
+        }
         .form-group {
-          margin-bottom: 2rem;
+          margin-bottom: 1.5rem;
+        }
+        table {
+          text-align: center;
+        }
+        table thead tr th {
+          text-align: center;
         }
       }
     </style>
