Changes in index file

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div id="about" class="jumbotron"
           style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;">
-          <h4 class="text-center  pt-2 pb-4"><span class="subheading">About Me</span></h4>
+          <h4 class="text-center  pt-2 pb-4"><span class="subheading">About me</span></h4>
           <h4 class="text-center ">Hi friends 👋 &mdash;
             I'm Junayed Rahaman. I'm a Web Developer and Designer.</h4>
           <p class="text-center pt-2" style="line-height: 1.6;">On this site I will be posting web development and
@@ -118,21 +118,44 @@
             <span class="subheading">Check out my projects</span>
           </h4>
           <div class="card my-3">
-            <h5 class="card-header text-center">DailyPay</h5>
+            <h5 class="card-header text-center">PocketMoney</h5>
             <div class="card-body">
-              <h5 class="card-title">Budgeting App</h5>
+              <h5 class="card-title">Budgeting Web App</h5>
               <p style="color: dimgray;" class="card-text">A Web App to keep track of budget and create
-                transaction records.</p>
-              <a href="https://github.com/junayedrahaman50/DailyPay" class="myBtnBlue ripple ">Repository
+                transaction records. Built using Node.js, Express, and MongoDB.</p>
+              <a href="https://github.com/junayedrahaman50/Pocket_Money" class="myBtnBlue ripple ">Repository
                 <i class="fa fa-code"></i> </a>
-              <a href="https://sleepy-atoll-78261.herokuapp.com/" id="delete" class="myBtnRed ripple ml-2 ">Website <i
+              <a href="#" id="delete" class="myBtnRed ripple ml-2 ">Website <i class="fa fa-globe"></i> </a>
+            </div>
+          </div>
+          <div class="card my-3">
+            <h5 class="card-header text-center">WebPixels</h5>
+            <div class="card-body">
+              <h5 class="card-title">Portfolio</h5>
+              <p style="color: dimgray;" class="card-text">This is my new portfolio for Freelance web development built
+                using html, css and javascript.</p>
+              <a href="https://github.com/junayedrahaman50/junayedrahaman50.github.io/tree/master/WebPixels"
+                class="myBtnBlue ripple ">Repository
+                <i class="fa fa-code"></i> </a>
+              <a href="https://webpixels.netlify.app/" id="delete" class="myBtnRed ripple ml-2 ">Website <i
                   class="fa fa-globe"></i> </a>
+            </div>
+          </div>
+          <div class="card my-3">
+            <h5 class="card-header text-center">BasirhatKatha</h5>
+            <div class="card-body">
+              <h5 class="card-title">News Blog</h5>
+              <p style="color: dimgray;" class="card-text">A bengali news blog built using Node.js, Bootstrap, Express,
+                and MongoDB.</p>
+              <a href="https://github.com/junayedrahaman50/Basirhatkatha.in-final" class="myBtnBlue ripple ">Repository
+                <i class="fa fa-code"></i> </a>
+              <a href="#" id="delete" class="myBtnRed ripple ml-2 ">Website <i class="fa fa-globe"></i> </a>
             </div>
           </div>
           <div class="card my-3">
             <h5 class="card-header text-center">QuickBooks</h5>
             <div class="card-body">
-              <h5 class="card-title">Accounting Firm Website</h5>
+              <h5 class="card-title">Landing Page</h5>
               <p style="color: dimgray;" class="card-text">Accounting firm concept landing page build
                 using
                 flexbox.</p>
@@ -156,7 +179,7 @@
         <div class="box my-3"
           style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;padding: 20px;">
           <h4 class="text-center  pb-4">
-            <span class="subheading">Contact Me</span>
+            <span class="subheading">Contact me</span>
           </h4>
           <div class="icons">
             <!-- <a href="https://wa.me/918145486622" data-toggle="tooltip" data-placement="bottom"
