New changes in index.html

--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
           style="background-color:#fff !important;color:#0f1419 !important;border-radius:3px !important;">
           <h4 class="text-center  pt-2 pb-4"><span class="subheading">About me</span></h4>
           <h4 class="text-center ">Hi friends 👋 &mdash;
-            I'm Junayed Rahaman. I'm a Web Developer and Designer.</h4>
-          <p class="text-center pt-2" style="line-height: 1.6;">On this site I will be posting web development and
-            computer
-            science stuff and over at Sunday Snippets - my weekly newsletter - I share web
-            development and productivity tips for developers. Sign up and get updated with amazing contents 😄.
-            as well as books 📚 and sports ⚽ reviews.</p>
+            I'm Junayed Rahaman.</h4>
+          <p class="text-center pt-2" style="line-height: 1.6;">I am an aspiring web developer who loves to dabble with
+            web technologies. I love working with libraries and frameworks such
+            as React and Node. My current goal is to be able to write really clean code with a solid ecosystem and to
+            have a mastery
+            of a few languages, such as JavaScript, Java, and Python. In my free time, I like to travel and play video
+            games.</p>
         </div>
       </div>
     </div>
@@ -132,7 +133,7 @@
             <h5 class="card-header text-center">WebPixels</h5>
             <div class="card-body">
               <h5 class="card-title">Portfolio</h5>
-              <p style="color: dimgray;" class="card-text">This is my new portfolio for Freelance web development built
+              <p style="color: dimgray;" class="card-text">This is my new portfolio for freelance web development built
                 using html, css and javascript.</p>
               <a href="https://github.com/junayedrahaman50/junayedrahaman50.github.io/tree/master/WebPixels"
                 class="myBtnBlue ripple ">Repository
